--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,22 +1,24 @@
 <div class="container bs-docs-container col-md-10 col-md-offset-1">
 	<h3>What's your work plan this week?</h3>
-	<table class="table">
-	 	<tr>
-	 		<td><h4>{{ dates[0].date | date:'MMMM'}}</h4></td>
-	 		<td ng-repeat="day in dates" ng-mouseenter="changeColor(day)">
-	 			{{ day.date | date:'EEEE' }}<br />{{ day.date | date:'dd' }}
-			</td>
-	 	</tr>
-	 	<tr>
-	 		<td></td>
-	 		<td ng-repeat="day in dates" ng-mouseenter="changeColor(day)">
-	 			<div class="icon {{ day.icon }}"></div>
-			</td>
-	 	</tr>
- 	</table>
+	<div class="table-responsive">
+		<table class="table">
+		 	<tr>
+		 		<td><h4>{{ dates[0].date | date:'MMMM'}}</h4></td>
+		 		<td class="days" ng-repeat="day in dates" ng-mouseenter="changeColor(day)">
+		 			{{ day.date | date:'EEEE' }}<br />{{ day.date | date:'dd' }}
+				</td>
+		 	</tr>
+		 	<tr>
+		 		<td></td>
+		 		<td ng-repeat="day in dates" ng-mouseenter="changeColor(day)">
+		 			<div class="icon {{ day.icon }}"></div>
+				</td>
+		 	</tr>
+	 	</table>
+	 </div>
 </div>
 <div class="container bs-docs-container col-md-10 col-md-offset-1">
- 	<h5>Your calendar</h5>
+ 	<h3>Here is your calendar</h3>
  	<div style="display:inline-block; min-height:290px;">
       <datepicker ng-model="dt" min-date="minDate" show-weeks="false" class="well well-sm" custom-class="getDayClass(date, mode)"></datepicker>
     </div>
